--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "task-trello-board",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mariasenyo.github.io/Trello-task/",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "install": "^0.13.0",
     "npm": "^8.1.3",
     "react": "^17.0.2",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject,",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build"
   },
   "eslintConfig": {
     "extends": [
